connect4/public/stylesheets/game.css
/* make body full screen */

html,
body {
    margin: 0;
    height: 100%;
}


/* center elements */

body {
    background: repeating-linear-gradient(-45deg, #c0e0e98e, #c0e0e98e 2.5px, white 2.5px, white 5px);
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: Virgil, serif;
}

main {
    display: table;
    height: 100%;
    width: 100%;
    padding: 20px;
}

section {
    text-align: center;
    margin: 20px;
}

.player-div {
    display: inline-block;
    padding: 10px;
    margin: 10px 35px;
    background-color: white;
    border-radius: 25px;
}

.container {
    display: table-cell;
    vertical-align: middle;
}
#win-message{
    width: 200px;
    height: 200px;
}

#clock {
    background-color: white;
    border: 3px solid black;
    border-radius: 50%;
    margin: 10px;
    height: 70px;
    width: 70px;
    font-size: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
}

#timer {
    background-color: orange;
    transform: rotate(45deg);
    display: inline-block;
    width: 50px;
    height: 50px;
    margin-bottom: 15px;
    text-align: center;
    border-radius: 10px;
}

#timer>span {
    margin-top: 25%;
}

#title {
    font-size: 40px;
    font-weight: bold;
    margin:0px;
    /* margin-bottom: 50px; */
    background: repeating-linear-gradient(45deg, #c0e0e98e, #c0e0e98e 2.5px, white 2.5px, white 5px);
    border: 3px solid black;
    border-radius: 10px;
}
#board-big{
    display: flex;
    flex-direction: column;
    width: 400px;
    height: 330px;
}

#board-container{
    height: 330px;
    display: flex;
    flex-flow: row,wrap;
}
.margin{
    flex-grow: 1;
    padding-left: 5px;
    padding-right: 5px;
    position: relative;
    height: 100%;
    min-width: 10px;
    background-color: rgba(0,170,212,255);
}
.left{
    border-top-left-radius: 25px;
}
.right{
    border-top-right-radius: 25px;
}
#board {
    flex-grow: 1;
    /* Daca vrei padding stanga dreapta la tabla
    /* padding-left: 5px;
    padding-right: 5px; */

    background-color: rgba(0, 136, 170, 255);
    display: flex;
    justify-content: space-around;
    align-content: space-between;
    flex-flow: row nowrap;
}
.board-column{
    padding-top: 5px;

    display: flex;
    flex-direction: column;
}
.board-column:hover{
    background-color: rgba(197, 197, 197, 0.555);
}

.board-cell {
    width: 40px;
    height: 40px;
    background-color: white;
    margin: 5px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.margin-bottom{
    height: 20px;
    width: 100%;
    background-color: rgba(0,102,128,255);

}


button {
    font-size: 30px;
    font-family: Virgil, serif;
    width: 100px;
    height: 50px;
    background: repeating-linear-gradient(45deg, #c0e0e98e, #c0e0e98e 2.5px, white 2.5px, white 5px);
    border: 3px dashed black;
}

button:hover {
    background-color: #6ebbd573;
}

button:active {
    background-color: #c0e0e98e;
}

